	packages in conjunction with PKG_LIBS=-liconv .


OTHERS

    o	bitmap(), dev2bitmap() and embedfonts() now look at environment
	variable GSC if R_GSCMD is unset.  (This is the variable used
	by ps2pdf and similar batch files.)

    o	win.version() and Sys.info() know about recent and upcoming
	Windows versions, including if they are running on a 64-bit
	platform.


BUILDING R

    o	Support for the ACML BLAS has been withdrawn (there is no
	version of ACML 4.0.0 for gcc under Windows, and none at all
	for gfortran).



	**************************************************
	*						 *
	*	       2.6 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 2.6.0 patched

PACKAGE INSTALLATION

    o	Fortran code in packages is no longer compiled with -Wall, as
	this is not done on other platforms.


OTHERS

    o	The canvas used when plotting on a jpeg() or bmp() device with
	a transparent background (most often by copying from a screen
	device with the default transparent background) is now white
	and not grey.

    o	It seems file.access() can be unreliable both ways: that is it
	can also report that access is barred when it is not.
	(Seen on network file systems.)  So install.packages() to a
	single library no longer makes use of file.access() but checks
	directory creation instead: it is still possible that you can
	create a directory but not be allowed to create a .dll or .chm
	file, at least under Vista.

    o	When R_COMPLETION is set to FALSE, TAB is no longer ignored,
	but advances to the next tab stop in Rterm (the pre-2.5.0
	behaviour) and inserts a space in Rgui.


BUG FIXES

    o	Saving a plot to Postscript or PDF required the font database
	to have been initialized: this is now done if necessary.
	
    o	Very long file or pathnames could cause a crash if opened in
	the script editor. (PR#10402)
 
		

		CHANGES IN R VERSION 2.6.0
		
GUI CHANGES
