@@ -1,6 +1,6 @@
 /*
  *  R : A Computer Language for Statistical Data Analysis
- *  Copyright (C) 2000-4  R Development Core Team
+ *  Copyright (C) 2000-7  R Development Core Team
  *
  *  This program is free software; you can redistribute it and/or modify
  *  it under the terms of the GNU General Public License as published by
@@ -17,9 +17,7 @@
  *  http://www.r-project.org/Licenses/
  */
 
-#define NONAMELESSUNION
-#include <stdlib.h>
-#include <stdio.h>
+#include <stdlib.h> /* for exit */
 
 extern int rcmdfn (int cmdarg, int argc, char **argv); /* in rcmdfn.c */
 
