@@ -1,6 +1,6 @@
 /*
  *  R : A Computer Language for Statistical Data Analysis
- *  Copyright (C) 2000-6  R Development Core Team
+ *  Copyright (C) 2000-7  R Development Core Team
  *
  *  This program is free software; you can redistribute it and/or modify
  *  it under the terms of the GNU General Public License as published by
@@ -17,7 +17,6 @@
  *  http://www.r-project.org/Licenses/
  */
 
-#define NONAMELESSUNION
 #include <windows.h>
 #include <direct.h>
 #include <stdlib.h>
